test/resources/typer/failing/CallError8.scala
object Call {
    L.Cons(1)
}